Update learn-message-jvm.md